added comms for prints

--- a/Turbofan_Model_Classification.ipynb
+++ b/Turbofan_Model_Classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
        "[20631 rows x 28 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +618,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +735,7 @@
        "[100 rows x 2 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -956,7 +956,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -989,7 +989,7 @@
        "Length: 20631, dtype: int64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1002,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1207,7 +1207,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1223,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1596,7 +1596,7 @@
        "[20631 rows x 25 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1610,7 +1610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1622,10 +1622,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1997,7 +1995,7 @@
        "[20631 rows x 26 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2008,7 +2006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2019,7 +2017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2034,7 +2032,7 @@
        "                      verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2052,37 +2050,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sensor_11       0.499892\n",
-      "Sensor_9        0.132475\n",
-      "Sensor_4        0.079612\n",
-      "Sensor_12       0.041871\n",
-      "Sensor_7        0.031833\n",
-      "Sensor_14       0.031177\n",
-      "Sensor_15       0.027383\n",
-      "Sensor_21       0.025479\n",
-      "Sensor_3        0.022576\n",
-      "Sensor_2        0.021619\n",
-      "Sensor_20       0.018466\n",
-      "Sensor_13       0.016975\n",
-      "Op_Setting_1    0.016603\n",
-      "Sensor_8        0.016378\n",
-      "Op_Setting_2    0.009921\n",
-      "Sensor_17       0.007232\n",
-      "Sensor_6        0.000507\n",
-      "Sensor_16       0.000000\n",
-      "Sensor_10       0.000000\n",
-      "Sensor_18       0.000000\n",
-      "Sensor_5        0.000000\n",
-      "Sensor_19       0.000000\n",
-      "Sensor_1        0.000000\n",
-      "Op_Setting_3    0.000000\n",
+      "Sensor_11           0.483486\n",
+      "Sensor_9            0.130864\n",
+      "Sensor_4            0.088083\n",
+      "Sensor_12           0.041532\n",
+      "Sensor_7            0.031754\n",
+      "Sensor_14           0.031479\n",
+      "Sensor_15           0.027242\n",
+      "Sensor_21           0.025856\n",
+      "Sensor_3            0.022350\n",
+      "Sensor_2            0.021245\n",
+      "Sensor_20           0.018407\n",
+      "Sensor_13           0.017209\n",
+      "Sensor_8            0.016538\n",
+      "Op_Setting_1        0.016367\n",
+      "Target_15_Cycles    0.010039\n",
+      "Op_Setting_2        0.009823\n",
+      "Sensor_17           0.007188\n",
+      "Sensor_6            0.000538\n",
+      "Sensor_16           0.000000\n",
+      "Sensor_5            0.000000\n",
+      "Sensor_18           0.000000\n",
+      "Sensor_19           0.000000\n",
+      "Sensor_1            0.000000\n",
+      "Op_Setting_3        0.000000\n",
+      "Sensor_10           0.000000\n",
       "dtype: float64\n"
      ]
     }
@@ -2095,7 +2094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2107,7 +2106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2431,7 +2430,7 @@
        "[20631 rows x 18 columns]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2448,14 +2447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2465,7 +2457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2476,7 +2468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2488,7 +2480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2499,7 +2491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -2514,7 +2506,7 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 12 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  26 tasks      | elapsed:    1.9s\n",
+      "[Parallel(n_jobs=-1)]: Done  26 tasks      | elapsed:    2.0s\n",
       "[Parallel(n_jobs=-1)]: Done  60 out of  60 | elapsed:    2.6s finished\n",
       "/home/nero/anaconda3/lib/python3.7/site-packages/sklearn/ensemble/forest.py:245: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n",
       "  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n"
@@ -2539,42 +2531,79 @@
     "                           )\n",
     "optimized_rf.fit(X_train, y_train)\n",
     "# show the best model estimators\n",
-    "y_pred_proba = optimized_rf.predict_proba(X_test)[:, 1]\n",
     "y_pred = optimized_rf.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy on training set: 0.998\n",
-      "Accuracy on test set: 0.993\n"
+      "Pipeline(memory=None,\n",
+      "         steps=[('standardize',\n",
+      "                 StandardScaler(copy=True, with_mean=True, with_std=True)),\n",
+      "                ('model',\n",
+      "                 RandomForestClassifier(bootstrap=True, class_weight=None,\n",
+      "                                        criterion='gini', max_depth=12,\n",
+      "                                        max_features='auto',\n",
+      "                                        max_leaf_nodes=None,\n",
+      "                                        min_impurity_decrease=0.0,\n",
+      "                                        min_impurity_split=None,\n",
+      "                                        min_samples_leaf=25,\n",
+      "                                        min_samples_split=2,\n",
+      "                                        min_weight_fraction_leaf=0.0,\n",
+      "                                        n_estimators=10, n_jobs=None,\n",
+      "                                        oob_score=False, random_state=None,\n",
+      "                                        verbose=0, warm_start=False))],\n",
+      "         verbose=False)\n"
      ]
     }
    ],
    "source": [
-    "print(\"Accuracy on training set: {:.3f}\".format(optimized_rf.score(X_train, y_train)))\n",
-    "print(\"Accuracy on test set: {:.3f}\".format(optimized_rf.score(X_test, y_test)))"
+    "print(optimized_rf.best_estimator_)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest Accuracy: 97.6%\n",
+      "Random Forest Precision: 80.3%\n",
+      "Random Forest Recall: 86.0%\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import roc_auc_score, accuracy_score, precision_score, recall_score, confusion_matrix\n",
+    "\n",
+    "# Accuracy: correctly predicted to the total\n",
+    "# Accuracy = TP+TN/TP+FP+FN+TN\n",
+    "print(\"Random Forest Accuracy: \"+\"{:.1%}\".format(accuracy_score(y_test, y_pred)));\n",
+    "\n",
+    "# Precision: correctly predicted positive  to the total predicted positive\n",
+    "# Precision = TP/TP+FP\n",
+    "print(\"Random Forest Precision: \"+\"{:.1%}\".format(precision_score(y_test, y_pred)));\n",
+    "\n",
+    "# Recall: correctly predicted positive to total in actual class\n",
+    "# Recall = TP/TP+FN\n",
+    "print(\"Random Forest Recall: \"+\"{:.1%}\".format(recall_score(y_test, y_pred)));"
+   ]
   }
  ],
  "metadata": {
